Fixed arrows styles in mobile version. Back to the UL instead of DIV-s. Fixed visibility for swiper area.

--- a/src/css/07-reviews.css
+++ b/src/css/07-reviews.css
@@ -1,11 +1,13 @@
+.swiper {
+  overflow: hidden;
+}
+
 .swiper-wrapper {
   display: flex;
-  gap: 16px;
   flex-wrap: nowrap;
-  overflow: hidden;
   line-height: 150%;
   letter-spacing: -0.02em;
-  margin: 32px 0;
+  margin: 0 0 32px;
   min-width: 0;
 }
 
@@ -63,9 +65,9 @@
   background: none;
   border: 1px solid rgba(250, 250, 250, 0.5);
   border-radius: 50%;
-  padding: 17px;
-  width: 68px;
-  height: 68px;
+  padding: 13px;
+  width: 52px;
+  height: 52px;
 }
 
 .swiper-button-prev svg,
@@ -75,6 +77,13 @@
 }
 
 @media screen and (min-width: 768px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 68px;
+    height: 68px;
+    padding: 17px;
+  }
+
   .swiper-button-prev svg,
   .swiper-button-next svg {
     width: 32px;
